# SLOM

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  UserQuestionnaire.txt  my_program  profile_output.txt  test.c  valgrind_input.txt
.github/workflows/: cmake-single-platform.yml  generate-codecov.yml
Data/: Freq.txt  MaoriWordsData.doc  MaoriWordsData.rtf  MaoriWordsData.txt  converted.txt  organise_data.py  ~$Freq.txt  ~$oriWordsData.doc  ~$oriWordsData.txt
Test/: test.c
Test/samples/: sample.c
docs/html/: annotated.html  dir_08e329178fd1abe73da96f20b637b3db.html  dir_26e161bd706b689737ea0ef524ddc480.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7c36e077ce596b07f02d756a5eb0c230.html  dir_d7549b3c99f9167a8a18b22ec47b0a36.html  dir_df38b2a5d584e0f6066b4518b95c638b.html  dir_e3da2e21cd04b3876441f71203b18d9f.html  dir_f09d564695a8a7f5713b0ef37bdf7d31.html  files.html  get__data_8h_source.html  md__r_e_a_d_m_e.html  pages.html  wordfind_8h_source.html  wordle_8h_source.html  x64-_debug_2_c_make_files_2_show_includes_2foo_8h_source.html  x64-_release_2_c_make_files_2_show_includes_2foo_8h_source.html
docs/html/search/: all_1.js  pages_0.js  pages_1.js  searchdata.js
docs/latex/: input__handler__t_8h_source.tex  md__r_e_a_d_m_e.tex  wordfind_8h_source.tex  wordle_8h_source.tex
documentation/html/: class_data_generator-members.html  class_data_generator.html  classes.html  dir_2711b234c37a852796aa3177a6a62d5d.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_693a45f7cda8160e52804ea5be274b94.html  dir_8a8338f548e4587636802e30ec27e1fd.html  dir_98f3c9490cdf79f1905bfac13c5cf365.html  dir_a298f104b44ef210794741bae0003d5b.html  dir_a3b2a9963cd53cfbcfa94a41c2df65da.html  dir_a7a9016b0dc16bdf3ab49213d588d9e6.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d837d1c7be636c9d2529ce970a954484.html  dir_e3d743d0ec9b4013b28b5d69101bc7fb.html  doxygen_crawl.html  get__data__t_8h_source.html  index.html  input__handler_8h_source.html  input__handler__t_8h_source.html
documentation/html/search/: all_4.js
documentation/latex/: annotated.tex  class_data_generator.tex  files.tex  get__data_8h_source.tex  get__data__t_8h_source.tex  input__handler_8h_source.tex  refman.tex  x64-_release_2_c_make_files_2_show_includes_2foo_8h_source.tex
include/: game.h  get_data.h  hangman.h  input_handler.h  io_handler.h  random.h  wordfind.h  wordle.h  wordmatchbingo.h  wordscapes.h
src/: CMakeLists.txt  Input_Handling.vcxproj  Input_Handling.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SLOM.vcxproj  SLOM.vcxproj.filters  cmake_install.cmake  hangman.cpp  main.cpp  wordfind.cpp  wordle.cpp  wordmatchbingo.cpp  wordscapes.cpp
src/utilities/: get_data.cpp  input_handler.cpp  random.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Tests.vcxproj  Tests.vcxproj.filters  cmake_install.cmake  get_data_t.cpp  get_data_t.h  hangman_t.cpp  input_handler_t.cpp  input_handler_t.h  main_t.cpp  test_utils.cpp  test_utils.h  wordfind_t.cpp  wordle_t.cpp  wordmatchbingo_t.cpp
tests/resources/: output.txt  test_data.txt
utilities/: CMakeLists.txt  get_data.cpp  input_handler.cpp  io_handler.cpp
